# WebShell_AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dissertation_text.txt  docker-compose.yml  indian final of M.Tech dissertation.docx  pyproject.toml  requirements.txt  start_api.sh
backend/: config.py  main.py  model_manager.py  schemas.py
configs/: model_config.yaml  train_config.yaml
docs/: AI_MODEL_DOCUMENTATION.md
experiments/: experiment_results.csv
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  config.js  ui.js
src/evaluation/: drift_monitor.py  metrics.py  visualize.py
src/features/: feature_engineering.py
src/models/: model.py  predict.py  train.py
tests/: test_api.py
